// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/text-tooltip/demo/arrow.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-wrap-wrap ant-flex-gap-middle"
>
  <span
    class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
    data-text-tooltip="Arrow enabled"
  >
    <button
      aria-describedby="test-id"
      aria-description="Arrow enabled"
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Arrow
      </span>
    </button>
    <span
      id="test-id"
      style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
    >
      Arrow enabled
    </span>
  </span>
  <span
    class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-no-arrow ant-text-tooltip-css-var css-var-test-id"
    data-text-tooltip="Arrow disabled"
  >
    <button
      aria-describedby="test-id"
      aria-description="Arrow disabled"
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        No Arrow
      </span>
    </button>
    <span
      id="test-id"
      style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
    >
      Arrow disabled
    </span>
  </span>
  <span
    class="ant-text-tooltip ant-text-tooltip-placement-bottom ant-text-tooltip-css-var css-var-test-id"
    data-text-tooltip="Bottom arrow"
  >
    <button
      aria-describedby="test-id"
      aria-description="Bottom arrow"
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Bottom
      </span>
    </button>
    <span
      id="test-id"
      style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
    >
      Bottom arrow
    </span>
  </span>
</div>
`;

exports[`renders components/text-tooltip/demo/basic.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-wrap-wrap ant-flex-align-center ant-flex-gap-middle"
>
  <span
    class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
    data-text-tooltip="Copy link"
  >
    <button
      aria-describedby="test-id"
      aria-description="Copy link"
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Hover me
      </span>
    </button>
    <span
      id="test-id"
      style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
    >
      Copy link
    </span>
  </span>
  <span
    class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
    data-text-tooltip="This tooltip only supports plain text."
  >
    <span
      aria-describedby="test-id"
      aria-description="This tooltip only supports plain text."
    >
      Plain text trigger
    </span>
    <span
      id="test-id"
      style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
    >
      This tooltip only supports plain text.
    </span>
  </span>
</div>
`;

exports[`renders components/text-tooltip/demo/colorful.tsx correctly 1`] = `
Array [
  <div
    class="ant-divider css-var-test-id ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
      Preset
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-test-id"
    style="flex-wrap:wrap"
  >
    <div
      class="ant-space-item"
    >
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id ant-text-tooltip-pink"
        data-text-tooltip="Preset color: pink"
      >
        <button
          aria-describedby="test-id"
          aria-description="Preset color: pink"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <span>
            pink
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Preset color: pink
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id ant-text-tooltip-red"
        data-text-tooltip="Preset color: red"
      >
        <button
          aria-describedby="test-id"
          aria-description="Preset color: red"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <span>
            red
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Preset color: red
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id ant-text-tooltip-orange"
        data-text-tooltip="Preset color: orange"
      >
        <button
          aria-describedby="test-id"
          aria-description="Preset color: orange"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <span>
            orange
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Preset color: orange
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id ant-text-tooltip-cyan"
        data-text-tooltip="Preset color: cyan"
      >
        <button
          aria-describedby="test-id"
          aria-description="Preset color: cyan"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <span>
            cyan
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Preset color: cyan
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id ant-text-tooltip-green"
        data-text-tooltip="Preset color: green"
      >
        <button
          aria-describedby="test-id"
          aria-description="Preset color: green"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <span>
            green
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Preset color: green
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id ant-text-tooltip-blue"
        data-text-tooltip="Preset color: blue"
      >
        <button
          aria-describedby="test-id"
          aria-description="Preset color: blue"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <span>
            blue
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Preset color: blue
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id ant-text-tooltip-purple"
        data-text-tooltip="Preset color: purple"
      >
        <button
          aria-describedby="test-id"
          aria-description="Preset color: purple"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <span>
            purple
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Preset color: purple
        </span>
      </span>
    </div>
  </div>,
  <div
    class="ant-divider css-var-test-id ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
      Custom
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-test-id"
    style="flex-wrap:wrap"
  >
    <div
      class="ant-space-item"
    >
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
        data-text-tooltip="Custom color: #f50"
        style="--ant-text-tooltip-background:#f50;--ant-text-tooltip-arrow-background:#f50;--ant-text-tooltip-text-color:#FFF"
      >
        <button
          aria-describedby="test-id"
          aria-description="Custom color: #f50"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <span>
            #f50
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Custom color: #f50
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
        data-text-tooltip="Custom color: #2db7f5"
        style="--ant-text-tooltip-background:#2db7f5;--ant-text-tooltip-arrow-background:#2db7f5;--ant-text-tooltip-text-color:#000"
      >
        <button
          aria-describedby="test-id"
          aria-description="Custom color: #2db7f5"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <span>
            #2db7f5
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Custom color: #2db7f5
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
        data-text-tooltip="Custom color: #87d068"
        style="--ant-text-tooltip-background:#87d068;--ant-text-tooltip-arrow-background:#87d068;--ant-text-tooltip-text-color:#000"
      >
        <button
          aria-describedby="test-id"
          aria-description="Custom color: #87d068"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <span>
            #87d068
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Custom color: #87d068
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
        data-text-tooltip="Custom color: #108ee9"
        style="--ant-text-tooltip-background:#108ee9;--ant-text-tooltip-arrow-background:#108ee9;--ant-text-tooltip-text-color:#FFF"
      >
        <button
          aria-describedby="test-id"
          aria-description="Custom color: #108ee9"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          type="button"
        >
          <span>
            #108ee9
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Custom color: #108ee9
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`renders components/text-tooltip/demo/perf.tsx correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-middle ant-space-gap-col-middle css-var-test-id"
  style="width:100%"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-test-id"
      style="flex-wrap:wrap"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-input-number ant-input-number-mode-input css-var-test-id ant-input-number-css-var ant-input-number-outlined"
        >
          <input
            aria-label="Tooltip item count"
            aria-valuemax="2000"
            aria-valuemin="1"
            aria-valuenow="20"
            autocomplete="off"
            class="ant-input-number-input"
            role="spinbutton"
            step="1"
            value="20"
          />
          <div
            class="ant-input-number-actions"
          >
            <span
              aria-disabled="false"
              aria-label="Increase Value"
              class="ant-input-number-action ant-input-number-action-up"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="up"
                class="anticon anticon-up"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-disabled="false"
              aria-label="Decrease Value"
              class="ant-input-number-action ant-input-number-action-down"
              role="button"
              unselectable="on"
            >
              <span
                aria-label="down"
                class="anticon anticon-down"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          aria-label="segmented control"
          aria-orientation="horizontal"
          class="ant-segmented css-var-test-id"
          role="radiogroup"
          tabindex="0"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item ant-segmented-item-selected"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                name="test-id"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="TextTooltip"
              >
                TextTooltip
              </div>
            </label>
            <label
              class="ant-segmented-item"
            >
              <input
                class="ant-segmented-item-input"
                name="test-id"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="Tooltip"
              >
                Tooltip
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <button
          aria-checked="false"
          aria-label="Open all tooltips"
          class="ant-switch css-var-test-id"
          role="switch"
          type="button"
        >
          <div
            class="ant-switch-handle"
          />
          <span
            class="ant-switch-inner"
          >
            <span
              class="ant-switch-inner-checked"
            />
            <span
              class="ant-switch-inner-unchecked"
            />
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <span
          class="ant-typography css-var-test-id"
        >
          Hover to trigger (20 items)
        </span>
      </div>
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-sm"
          type="button"
        >
          <span>
            Reset metrics
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography ant-typography-secondary css-var-test-id"
    >
      Render 
      <!-- -->
      20
      <!-- -->
       items with the same content and placement.
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-start ant-space-gap-row-large ant-space-gap-col-large css-var-test-id"
      style="flex-wrap:wrap"
    >
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-vertical css-var-test-id"
          style="column-gap:4px;row-gap:4px"
        >
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography css-var-test-id"
            >
              <strong>
                Mount
              </strong>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center css-var-test-id"
              style="column-gap:4px;row-gap:4px"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <strong>
                    Count
                    <!-- -->
                    :
                  </strong>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <code>
                    0
                  </code>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center css-var-test-id"
              style="column-gap:4px;row-gap:4px"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <strong>
                    Total actual
                    <!-- -->
                    :
                  </strong>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <code>
                    0.00 ms
                  </code>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center css-var-test-id"
              style="column-gap:4px;row-gap:4px"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <strong>
                    Average actual
                    <!-- -->
                    :
                  </strong>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <code>
                    0.00 ms
                  </code>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center css-var-test-id"
              style="column-gap:4px;row-gap:4px"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <strong>
                    Max actual
                    <!-- -->
                    :
                  </strong>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <code>
                    0.00 ms
                  </code>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-vertical css-var-test-id"
          style="column-gap:4px;row-gap:4px"
        >
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography css-var-test-id"
            >
              <strong>
                Update
              </strong>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center css-var-test-id"
              style="column-gap:4px;row-gap:4px"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <strong>
                    Count
                    <!-- -->
                    :
                  </strong>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <code>
                    0
                  </code>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center css-var-test-id"
              style="column-gap:4px;row-gap:4px"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <strong>
                    Total actual
                    <!-- -->
                    :
                  </strong>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <code>
                    0.00 ms
                  </code>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center css-var-test-id"
              style="column-gap:4px;row-gap:4px"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <strong>
                    Average actual
                    <!-- -->
                    :
                  </strong>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <code>
                    0.00 ms
                  </code>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center css-var-test-id"
              style="column-gap:4px;row-gap:4px"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <strong>
                    Max actual
                    <!-- -->
                    :
                  </strong>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-typography css-var-test-id"
                >
                  <code>
                    0.00 ms
                  </code>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      style="padding:12px;border:1px solid #f0f0f0;border-radius:8px;background:#fafafa"
    >
      <div
        style="display:flex;flex-wrap:wrap;gap:8px"
      >
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 1"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 1"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 1
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 1
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 2"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 2"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 2
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 2
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 3"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 3"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 3
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 3
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 4"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 4"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 4
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 4
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 5"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 5"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 5
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 5
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 6"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 6"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 6
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 6
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 7"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 7"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 7
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 7
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 8"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 8"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 8
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 8
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 9"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 9"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 9
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 9
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 10"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 10"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 10
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 10
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 11"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 11"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 11
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 11
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 12"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 12"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 12
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 12
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 13"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 13"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 13
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 13
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 14"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 14"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 14
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 14
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 15"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 15"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 15
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 15
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 16"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 16"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 16
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 16
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 17"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 17"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 17
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 17
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 18"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 18"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 18
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 18
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 19"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 19"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 19
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 19
          </span>
        </span>
        <span
          class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
          data-text-tooltip="Tooltip content 20"
        >
          <span
            aria-describedby="test-id"
            aria-description="Tooltip content 20"
            style="display:inline-flex;align-items:center;justify-content:center;width:88px;height:32px;border:1px solid #d9d9d9;border-radius:6px;background:#fff"
          >
            Item 20
          </span>
          <span
            id="test-id"
            style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
          >
            Tooltip content 20
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/text-tooltip/demo/placement.tsx correctly 1`] = `
<div
  class="demo ant-flex css-var-test-id ant-flex-align-center ant-flex-justify-center ant-flex-vertical"
>
  <div
    class="ant-flex css-var-test-id ant-flex-align-center ant-flex-justify-center"
    style="white-space:nowrap"
  >
    <span
      class="ant-text-tooltip ant-text-tooltip-placement-topLeft ant-text-tooltip-css-var css-var-test-id"
      data-text-tooltip="Static placement"
    >
      <button
        aria-describedby="test-id"
        aria-description="Static placement"
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:84px;margin:4px"
        type="button"
      >
        <span>
          TL
        </span>
      </button>
      <span
        id="test-id"
        style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
      >
        Static placement
      </span>
    </span>
    <span
      class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
      data-text-tooltip="Static placement"
    >
      <button
        aria-describedby="test-id"
        aria-description="Static placement"
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:84px;margin:4px"
        type="button"
      >
        <span>
          Top
        </span>
      </button>
      <span
        id="test-id"
        style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
      >
        Static placement
      </span>
    </span>
    <span
      class="ant-text-tooltip ant-text-tooltip-placement-topRight ant-text-tooltip-css-var css-var-test-id"
      data-text-tooltip="Static placement"
    >
      <button
        aria-describedby="test-id"
        aria-description="Static placement"
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:84px;margin:4px"
        type="button"
      >
        <span>
          TR
        </span>
      </button>
      <span
        id="test-id"
        style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
      >
        Static placement
      </span>
    </span>
  </div>
  <div
    class="ant-flex css-var-test-id ant-flex-align-center ant-flex-justify-space-between"
    style="width:452px"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-center ant-flex-vertical"
    >
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-leftTop ant-text-tooltip-css-var css-var-test-id"
        data-text-tooltip="Static placement"
      >
        <button
          aria-describedby="test-id"
          aria-description="Static placement"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width:84px;margin:4px"
          type="button"
        >
          <span>
            LT
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Static placement
        </span>
      </span>
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-left ant-text-tooltip-css-var css-var-test-id"
        data-text-tooltip="Static placement"
      >
        <button
          aria-describedby="test-id"
          aria-description="Static placement"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width:84px;margin:4px"
          type="button"
        >
          <span>
            Left
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Static placement
        </span>
      </span>
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-leftBottom ant-text-tooltip-css-var css-var-test-id"
        data-text-tooltip="Static placement"
      >
        <button
          aria-describedby="test-id"
          aria-description="Static placement"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width:84px;margin:4px"
          type="button"
        >
          <span>
            LB
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Static placement
        </span>
      </span>
    </div>
    <div
      class="ant-flex css-var-test-id ant-flex-align-center ant-flex-vertical"
    >
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-rightTop ant-text-tooltip-css-var css-var-test-id"
        data-text-tooltip="Static placement"
      >
        <button
          aria-describedby="test-id"
          aria-description="Static placement"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width:84px;margin:4px"
          type="button"
        >
          <span>
            RT
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Static placement
        </span>
      </span>
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-right ant-text-tooltip-css-var css-var-test-id"
        data-text-tooltip="Static placement"
      >
        <button
          aria-describedby="test-id"
          aria-description="Static placement"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width:84px;margin:4px"
          type="button"
        >
          <span>
            Right
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Static placement
        </span>
      </span>
      <span
        class="ant-text-tooltip ant-text-tooltip-placement-rightBottom ant-text-tooltip-css-var css-var-test-id"
        data-text-tooltip="Static placement"
      >
        <button
          aria-describedby="test-id"
          aria-description="Static placement"
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width:84px;margin:4px"
          type="button"
        >
          <span>
            RB
          </span>
        </button>
        <span
          id="test-id"
          style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
        >
          Static placement
        </span>
      </span>
    </div>
  </div>
  <div
    class="ant-flex css-var-test-id ant-flex-align-center ant-flex-justify-center"
    style="white-space:nowrap"
  >
    <span
      class="ant-text-tooltip ant-text-tooltip-placement-bottomLeft ant-text-tooltip-css-var css-var-test-id"
      data-text-tooltip="Static placement"
    >
      <button
        aria-describedby="test-id"
        aria-description="Static placement"
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:84px;margin:4px"
        type="button"
      >
        <span>
          BL
        </span>
      </button>
      <span
        id="test-id"
        style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
      >
        Static placement
      </span>
    </span>
    <span
      class="ant-text-tooltip ant-text-tooltip-placement-bottom ant-text-tooltip-css-var css-var-test-id"
      data-text-tooltip="Static placement"
    >
      <button
        aria-describedby="test-id"
        aria-description="Static placement"
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:84px;margin:4px"
        type="button"
      >
        <span>
          Bottom
        </span>
      </button>
      <span
        id="test-id"
        style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
      >
        Static placement
      </span>
    </span>
    <span
      class="ant-text-tooltip ant-text-tooltip-placement-bottomRight ant-text-tooltip-css-var css-var-test-id"
      data-text-tooltip="Static placement"
    >
      <button
        aria-describedby="test-id"
        aria-description="Static placement"
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:84px;margin:4px"
        type="button"
      >
        <span>
          BR
        </span>
      </button>
      <span
        id="test-id"
        style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
      >
        Static placement
      </span>
    </span>
  </div>
</div>
`;

exports[`renders components/text-tooltip/demo/trigger.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-wrap-wrap ant-flex-gap-middle"
>
  <span
    class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
    data-text-tooltip="Hover trigger"
  >
    <button
      aria-describedby="test-id"
      aria-description="Hover trigger"
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Hover
      </span>
    </button>
    <span
      id="test-id"
      style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
    >
      Hover trigger
    </span>
  </span>
  <span
    class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
    data-text-tooltip="Focus trigger"
  >
    <button
      aria-describedby="test-id"
      aria-description="Focus trigger"
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Focus
      </span>
    </button>
    <span
      id="test-id"
      style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
    >
      Focus trigger
    </span>
  </span>
  <span
    class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-open ant-text-tooltip-css-var css-var-test-id"
    data-text-tooltip="Open by default"
  >
    <button
      aria-describedby="test-id"
      aria-description="Open by default"
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Default open
      </span>
    </button>
    <span
      id="test-id"
      style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
    >
      Open by default
    </span>
  </span>
  <span
    class="ant-text-tooltip ant-text-tooltip-placement-top ant-text-tooltip-css-var css-var-test-id"
    data-text-tooltip="Controlled open state"
  >
    <button
      aria-describedby="test-id"
      aria-description="Controlled open state"
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Open controlled
      </span>
    </button>
    <span
      id="test-id"
      style="position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0"
    >
      Controlled open state
    </span>
  </span>
</div>
`;
